--- a/docs/style.css
+++ b/docs/style.css
@@ -93,6 +93,42 @@ canvas {
     background: var(--c12);
 }
 
+#reset {
+    position: absolute;
+    right: 28px;
+    top: 522px;
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 4px solid var(--c5);
+    background-color: var(--c2);
+    color: var(--c7);
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+#reset:hover {
+    background-color: var(--c8);
+}
+
+#reset.blinking {
+    animation: blink 0.3s 3;
+}
+
+@keyframes blink {
+    0% {
+        background-color: var(--c0);
+    }
+
+    50% {
+        background-color: var(--c2);
+    }
+
+    100% {
+        background-color: var(--c8);
+    }
+}
+
 /* base class for PICO-8 styled elements */
 .base {
     background: var(--bg);
